--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
     "@testing-library/jest-dom": "5.17.0",
     "@testing-library/react": "13.4.0",
     "@testing-library/user-event": "13.5.0",
+    "apexcharts": "3.44.0",
     "axios": "1.6.0",
     "gsap": "3.12.2",
     "react": "^18.2.0",
+    "react-apexcharts": "1.4.1",
     "react-dom": "^18.2.0",
     "react-helmet-async": "1.3.0",
     "react-icons": "4.11.0",
